# docs/swagger.yaml
@@ -87,12 +87,40 @@ paths:
         in: formData
         name: password
         type: string
+      - description: 手机号
+        in: formData
+        name: phone
+        type: string
+      - description: 邮箱
+        in: formData
+        name: email
+        type: string
       responses:
         "200":
           description: OK
           schema:
             type: string
       summary: 修改用户
+      tags:
+      - 用户模块
+  /user/userLogin:
+    post:
+      description: 用户登入
+      parameters:
+      - description: 用户名
+        in: formData
+        name: name
+        type: string
+      - description: 密码
+        in: formData
+        name: password
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 用户登入
       tags:
       - 用户模块
 swagger: "2.0"
